# daily-job-matcher

./: .env.example  .gitattributes  .gitignore  METHODOLOGY.md  README.md  RUNBOOK.md  SKILL.md  apify_input.example.json  pyproject.toml  requirements.txt
data/: cv.example.md  sample_jobs.json
docs/: DAILY_PLAYBOOK.md  JOB_SOURCES.md  SUPPLY_CHANNELS_SG.md
scripts/: combine_sources.py  fetch_indeed.py  send_daily_email.py
src/jobscreener/: __init__.py  __main__.py  cli.py  config.py  cv.py  dedup.py  email_out.py  filters.py  history.py  llm.py  models.py  normalize.py  notion.py  pipeline.py  report.py  scoring.py  sources.py
tests/: __init__.py  test_history.py  test_normalize_filter.py  test_notion.py  test_pipeline.py  test_scoring.py  test_sources.py
