[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscreener"
version = "1.0.0"
description = "Daily AI job-screening pipeline: CV-vs-JD scoring, hard filters, ranked HTML digest, optional LLM re-scoring and email."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Chenxi Zhao", email = "cz3291@nyu.edu" }]
license = { text = "MIT" }
dependencies = [
    "scikit-learn>=1.4",
    "python-docx>=1.1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40,<1.0"]
jobs = ["python-jobspy>=1.1"]        # live scraping via `--source jobspy`

[project.scripts]
jobscreener = "jobscreener.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
